# uvre

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_STYLE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: CMakeLists.txt  base_window.cpp  triangle.cpp
gl_33/: CMakeLists.txt  gl33_commandlist.cpp  gl33_private.hpp  gl33_renderdevice.cpp  gl33_rmain.cpp
gl_33/glad/include/glad/: gl.h
gl_33/glad/src/: gl33.c
gl_46/: CMakeLists.txt  gl46_commandlist.cpp  gl46_private.hpp  gl46_renderdevice.cpp  gl46_rmain.cpp
include/uvre/: commandlist.hpp  const.hpp  exports.hpp  fwd.hpp  renderdevice.hpp  types.hpp  uvre.hpp
src_gl/: CMakeLists.txt  gl_commandlist.cpp  gl_private.hpp  gl_renderdevice.cpp  gl_rmain.cpp
src_gl/glad/include/glad/: gl.h
test/: CMakeLists.txt  test.cpp
