set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
include(FindGLFW3)
if(GLFW3_FOUND)
    function(add_example_executable target)
        add_executable(${target} "${CMAKE_CURRENT_LIST_DIR}/${target}.cpp")
        target_compile_definitions(${target} PRIVATE GLFW_INCLUDE_NONE)
        target_link_libraries(${target} PRIVATE ${GLFW3_LIBRARY} uvre)
    endfunction()

    add_example_executable(base_window)
    add_example_executable(triangle)
else()
    message(WARNING "!! GLFW3 not found, examples unavailable!")
endif()
